--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fansoaezra",
+  "name": "integrations",
   "version": "0.1.0",
   "homepage": "https://fansoadev.github.io/integrations/",
   "private": true,
